--- a/templates/about.html
+++ b/templates/about.html
@@ -9,30 +9,30 @@
 </head>
 
 <body>
-    <div class="header-pages">
-    {% if 'username' in session %}
-        <p><a href="{{ url_for('logout') }}"><button>
-                <img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
-            </a>
-            <a href="{{ url_for('index') }}"><button>
-                <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
-            </a>
-            <a href="{{ url_for('dashboard') }}">
-                <button><img src="{{ url_for('static', filename='link-icons/book-atlas-solid.svg') }}" alt=book-atlas-solid.svg></button>
-            </a>
-        </p>
-    {% else %}
-        <p><a href="{{ url_for('login') }}"><button>
-                <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
-            </a>
-            <a href="{{ url_for('register') }}">
-                <button><img src="{{ url_for('static', filename='link-icons/registration.svg') }}" alt=registration.svg></button>
-            </a>
-            <a href="{{ url_for('index') }}"><button>
-                <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
-            </a>
-        </p>
-    {% endif %}
+    <div class="header-background header-buttons">
+        {% if 'username' in session %}
+            <p><a href="{{ url_for('logout') }}"><button>
+                    <img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
+                </a>
+                <a href="{{ url_for('index') }}"><button>
+                    <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+                </a>
+                <a href="{{ url_for('dashboard') }}">
+                    <button><img src="{{ url_for('static', filename='link-icons/book-atlas-solid.svg') }}" alt=book-atlas-solid.svg></button>
+                </a>
+            </p>
+        {% else %}
+            <p><a href="{{ url_for('login') }}"><button>
+                    <img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
+                </a>
+                <a href="{{ url_for('register') }}">
+                    <button><img src="{{ url_for('static', filename='link-icons/registration.svg') }}" alt=registration.svg></button>
+                </a>
+                <a href="{{ url_for('index') }}"><button>
+                    <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
+                </a>
+            </p>
+        {% endif %}
     </div>
     <div class="content-about">
         <h2>Content "About"</h2>
