--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="header-pages">
+    <div class="header-background header-buttons">
     {% if 'username' in session %}
         <p><a href="{{ url_for('logout') }}"><button>
                 <img src="{{ url_for('static', filename='link-icons/logout.svg') }}" alt=logout.svg></button>
