--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 
 <body>
     <h2>Login</h2>
-    <div class="header-pages">
+    <div class="header-background header-buttons">
     {% if 'username' in session %}
         <p><a href="{{ url_for('index') }}"><button>
                 <img src="{{ url_for('static', filename='link-icons/house-solid.svg') }}" alt=house-solid.svg></button>
@@ -45,7 +45,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <br>
-            <button type="submit">Submit</button>
+            <button type="submit"><img src="{{ url_for('static', filename='link-icons/circle-check-solid.svg') }}" alt=circle-check-solid.svg></button>
         </form>
         {% if error_message %}
             <p class="error-message">{{ error_message }}</p>
