--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,13 @@
         </p>
     {% else %}
         <p><a href="{{ url_for('login') }}">
-                <button><img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg></button>
+                <button><img src="{{ url_for('static', filename='link-icons/login.svg') }}" alt=login.svg>Login</button>
             </a>
             <a href="{{ url_for('register') }}">
-                <button><img src="{{ url_for('static', filename='link-icons/registration.svg') }}" alt=registration.svg>Registr</button>
+                <button><img src="{{ url_for('static', filename='link-icons/registration.svg') }}" alt=registration.svg>Registration</button>
             </a>
             <a href="{{ url_for('about') }}">
-                <button><img src="{{ url_for('static', filename='link-icons/info.svg') }}" alt=info.svg></button>
+                <button><img src="{{ url_for('static', filename='link-icons/info.svg') }}" alt=info.svg>Info</button>
             </a>
             {% endif %}
     </div>
