--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,7 +43,7 @@
         </p>
     {% endif %}
     </div>
-    <div class="center-div">
+    <div class="center-div-dashboard">
         <h2>Welcome, {{ username }}!</h2>
     </div>
     <p>Dashboard content goes here.</p>
