--- a/templates/login.html
+++ b/templates/login.html
@@ -36,7 +36,7 @@
         </p>
     {% endif %}
     </div>
-    <div class="center-div">
+    <div class="center-div-login">
         <h2>Login</h2>
         <form method="post">
             <label for="username">Username:</label>
